--- a/public/form.html
+++ b/public/form.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
+
   <body>
     <form
       name="contact"
@@ -17,6 +18,7 @@
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
+      <input type="file" id="file" name="file" multiple />
     </form>
   </body>
 </html>
